--- a/L5-Evaluation.ipynb
+++ b/L5-Evaluation.ipynb
@@ -361,8 +361,7 @@
    "execution_count": 17,
    "id": "8a142638",
    "metadata": {
-    "height": 30,
-    "scrolled": false
+    "height": 30
    },
    "outputs": [
     {
@@ -631,7 +630,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9",
    "language": "python",
    "name": "python3"
   },
@@ -645,7 +644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
