Change the HuggingFaceEmbeddings and replace OpenAI vectordb with db = PGVector.from_documents(     documents=all_splits,     embedding=embeddings,     collection_name=COLLECTION_NAME,     connection_string=CONNECTION_STRING,)

--- a/L3-Chains.ipynb
+++ b/L3-Chains.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "id": "f415c553",
    "metadata": {},
    "outputs": [
@@ -29,19 +29,44 @@
       "Requirement already satisfied: python-dotenv in /opt/app-root/lib/python3.9/site-packages (1.0.1)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Requirement already satisfied: text_generation in /opt/app-root/lib/python3.9/site-packages (0.6.1)\n",
+      "Requirement already satisfied: pydantic<3,>1.10 in /opt/app-root/lib/python3.9/site-packages (from text_generation) (1.10.14)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.12 in /opt/app-root/lib/python3.9/site-packages (from text_generation) (0.21.3)\n",
+      "Requirement already satisfied: aiohttp<4.0,>=3.8 in /opt/app-root/lib/python3.9/site-packages (from text_generation) (3.9.3)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /opt/app-root/lib/python3.9/site-packages (from aiohttp<4.0,>=3.8->text_generation) (1.4.1)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /opt/app-root/lib/python3.9/site-packages (from aiohttp<4.0,>=3.8->text_generation) (1.3.1)\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0 in /opt/app-root/lib/python3.9/site-packages (from aiohttp<4.0,>=3.8->text_generation) (4.0.3)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /opt/app-root/lib/python3.9/site-packages (from aiohttp<4.0,>=3.8->text_generation) (6.0.5)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /opt/app-root/lib/python3.9/site-packages (from aiohttp<4.0,>=3.8->text_generation) (23.2.0)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /opt/app-root/lib/python3.9/site-packages (from aiohttp<4.0,>=3.8->text_generation) (1.9.4)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /opt/app-root/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.12->text_generation) (6.0.1)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /opt/app-root/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.12->text_generation) (2024.2.0)\n",
+      "Requirement already satisfied: filelock in /opt/app-root/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.12->text_generation) (3.13.1)\n",
+      "Requirement already satisfied: packaging>=20.9 in /opt/app-root/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.12->text_generation) (23.2)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /opt/app-root/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.12->text_generation) (4.9.0)\n",
+      "Requirement already satisfied: requests in /opt/app-root/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.12->text_generation) (2.31.0)\n",
+      "Requirement already satisfied: tqdm>=4.42.1 in /opt/app-root/lib/python3.9/site-packages (from huggingface-hub<1.0,>=0.12->text_generation) (4.66.1)\n",
+      "Requirement already satisfied: idna>=2.0 in /opt/app-root/lib/python3.9/site-packages (from yarl<2.0,>=1.0->aiohttp<4.0,>=3.8->text_generation) (3.6)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/app-root/lib/python3.9/site-packages (from requests->huggingface-hub<1.0,>=0.12->text_generation) (1.26.18)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/app-root/lib/python3.9/site-packages (from requests->huggingface-hub<1.0,>=0.12->text_generation) (2024.2.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /opt/app-root/lib/python3.9/site-packages (from requests->huggingface-hub<1.0,>=0.12->text_generation) (3.3.2)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "!pip install python-dotenv\n",
+    "!pip install text_generation\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "id": "0a8e67a4",
    "metadata": {},
    "outputs": [],
@@ -54,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 22,
    "id": "1eec321f",
    "metadata": {},
    "outputs": [
@@ -63,9 +88,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pandas in /opt/app-root/lib/python3.9/site-packages (1.5.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/app-root/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: numpy>=1.20.3 in /opt/app-root/lib/python3.9/site-packages (from pandas) (1.24.4)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /opt/app-root/lib/python3.9/site-packages (from pandas) (2023.3.post1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /opt/app-root/lib/python3.9/site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /opt/app-root/lib/python3.9/site-packages (from pandas) (2024.1)\n",
       "Requirement already satisfied: six>=1.5 in /opt/app-root/lib/python3.9/site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "\n",
       "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.2.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
@@ -79,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "id": "44195cd3",
    "metadata": {},
    "outputs": [],
@@ -90,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "id": "99095890",
    "metadata": {},
    "outputs": [
@@ -158,7 +183,7 @@
        "4  Milk Frother Handheld\\n   I loved this product. But they only seem to l..."
       ]
      },
-     "execution_count": 71,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
    "id": "d5fa41cc",
    "metadata": {},
    "outputs": [],
@@ -197,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "id": "f12434e2",
    "metadata": {},
    "outputs": [],
@@ -207,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "id": "3c5e5024-8e74-49cf-99a5-9fad62e471f5",
    "metadata": {},
    "outputs": [],
@@ -231,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "id": "e236f8ed",
    "metadata": {},
    "outputs": [],
@@ -244,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "id": "67a0643a",
    "metadata": {},
    "outputs": [],
@@ -255,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 30,
    "id": "f8ff4518",
    "metadata": {},
    "outputs": [
@@ -274,7 +299,7 @@
        "'\\n\\nAI: A company that makes Queen Size Sheet Sets could be called \"Queen Size Sheets Co.\" or \"Queen Size Bedding Co.\"'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 31,
    "id": "7aa1dd6c",
    "metadata": {},
    "outputs": [],
@@ -304,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 32,
    "id": "e89863c5",
    "metadata": {},
    "outputs": [],
@@ -323,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 33,
    "id": "4ef81b1e",
    "metadata": {},
    "outputs": [],
@@ -340,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 34,
    "id": "937c2c61",
    "metadata": {},
    "outputs": [],
@@ -352,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 35,
    "id": "7e9e8235",
    "metadata": {},
    "outputs": [
@@ -379,7 +404,7 @@
        "'.'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 36,
    "id": "46eea19c",
    "metadata": {},
    "outputs": [],
@@ -408,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 37,
    "id": "beb45108",
    "metadata": {},
    "outputs": [],
@@ -428,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 38,
    "id": "d659523e",
    "metadata": {},
    "outputs": [],
@@ -445,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 39,
    "id": "e302f53a",
    "metadata": {},
    "outputs": [],
@@ -462,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 40,
    "id": "e41274dd",
    "metadata": {},
    "outputs": [],
@@ -482,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 41,
    "id": "75488496",
    "metadata": {},
    "outputs": [],
@@ -499,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 42,
    "id": "a75e7c6b",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1066,7 @@
        " 'followup_message': ''}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 43,
    "id": "a72c938f",
    "metadata": {},
    "outputs": [],
@@ -1115,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 44,
    "id": "5d30ae83",
    "metadata": {},
    "outputs": [],
@@ -1146,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 45,
    "id": "e1e5afc2",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 46,
    "id": "8e42098b",
    "metadata": {},
    "outputs": [],
@@ -1168,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 47,
    "id": "5ff1bc5f",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 48,
    "id": "07c2d9b7",
    "metadata": {},
    "outputs": [],
@@ -1199,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 49,
    "id": "9f6f6fe5",
    "metadata": {},
    "outputs": [],
@@ -1237,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 50,
    "id": "3333c986",
    "metadata": {},
    "outputs": [],
@@ -1256,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 51,
    "id": "30064187",
    "metadata": {},
    "outputs": [],
@@ -1269,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 52,
    "id": "ed8c1ddc",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1334,7 @@
       "\u001b[0;31mOutputParserException\u001b[0m: Got invalid JSON object. Error: Expecting value: line 1 column 1 (char 0)",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[0;31mOutputParserException\u001b[0m                     Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[99], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mchain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mWhat is black body radiation?\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[52], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mchain\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mWhat is black body radiation?\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/app-root/lib64/python3.9/site-packages/langchain_core/_api/deprecation.py:145\u001b[0m, in \u001b[0;36mdeprecated.<locals>.deprecate.<locals>.warning_emitting_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    143\u001b[0m     warned \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    144\u001b[0m     emit_warning()\n\u001b[0;32m--> 145\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mwrapped\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/opt/app-root/lib64/python3.9/site-packages/langchain/chains/base.py:545\u001b[0m, in \u001b[0;36mChain.run\u001b[0;34m(self, callbacks, tags, metadata, *args, **kwargs)\u001b[0m\n\u001b[1;32m    543\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(args) \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m    544\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m`run` supports only one positional argument.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 545\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43margs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcallbacks\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcallbacks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtags\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmetadata\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmetadata\u001b[49m\u001b[43m)\u001b[49m[\n\u001b[1;32m    546\u001b[0m         _output_key\n\u001b[1;32m    547\u001b[0m     ]\n\u001b[1;32m    549\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m kwargs \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m args:\n\u001b[1;32m    550\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m(kwargs, callbacks\u001b[38;5;241m=\u001b[39mcallbacks, tags\u001b[38;5;241m=\u001b[39mtags, metadata\u001b[38;5;241m=\u001b[39mmetadata)[\n\u001b[1;32m    551\u001b[0m         _output_key\n\u001b[1;32m    552\u001b[0m     ]\n",
       "File \u001b[0;32m/opt/app-root/lib64/python3.9/site-packages/langchain_core/_api/deprecation.py:145\u001b[0m, in \u001b[0;36mdeprecated.<locals>.deprecate.<locals>.warning_emitting_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    143\u001b[0m     warned \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    144\u001b[0m     emit_warning()\n\u001b[0;32m--> 145\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mwrapped\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
